z-index fix

--- a/src/components/post/PostContent.module.scss
+++ b/src/components/post/PostContent.module.scss
@@ -87,4 +87,5 @@
   position: absolute;
   right: 16px;
   top: 20px;
+  z-index: 0;
 }
